playbooks/resources/elasticsearch/IngressRouteTCP.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: elasticsearch-master
  namespace: elasticsearch
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`elasticsearch.local`)
    services:
    - name: elasticsearch-master
      port: 9200
  tls:
    secretName: elasticsearch-master-certs
    passthrough: true
